--- a/index/index.html
+++ b/index/index.html
@@ -1,22 +1,21 @@
-# my-front-end-project
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
-header {
-    background-color: #333;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-}
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 0.5rem;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мой проект</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Добро пожаловать в мой проект!</h1>
+    </header>
+    <main>
+        <p>Это простой пример проекта на HTML, CSS и JS.</p>
+    </main>
+    <footer>
+        <p>© 2025</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
